CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(QBASELIB)

INCLUDE(../CMakeCommon)

AUX_SOURCE_DIRECTORY(. SDK_SRC)
AUX_SOURCE_DIRECTORY(./Log     SDK_SRC)
AUX_SOURCE_DIRECTORY(./Threads SDK_SRC)
AUX_SOURCE_DIRECTORY(./SmartPtr SDK_SRC)
AUX_SOURCE_DIRECTORY(./lzf SDK_SRC)
SET(LIBRARY_OUTPUT_PATH ../)
ADD_LIBRARY(qbaselib STATIC ${SDK_SRC})

SET_TARGET_PROPERTIES(qbaselib PROPERTIES LINKER_LANGUAGE CXX)
