CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(QBASELIB)

INCLUDE(../CMakeCommon)

AUX_SOURCE_DIRECTORY(. SDK_SRC)
AUX_SOURCE_DIRECTORY(./Log     SDK_SRC)
AUX_SOURCE_DIRECTORY(./Threads SDK_SRC)
AUX_SOURCE_DIRECTORY(./SmartPtr SDK_SRC)
AUX_SOURCE_DIRECTORY(./lzf SDK_SRC)
SET(LIBRARY_OUTPUT_PATH ../)
ADD_LIBRARY(qbaselib SHARED ${SDK_SRC})

TARGET_LINK_LIBRARIES(qbaselib; pthread)

SET_TARGET_PROPERTIES(qbaselib PROPERTIES LINKER_LANGUAGE CXX)
