INCLUDE(${PROJECT_SOURCE_DIR}/CMakeCommon)

AUX_SOURCE_DIRECTORY(. SDK_SRC)
AUX_SOURCE_DIRECTORY(./Log     SDK_SRC)
AUX_SOURCE_DIRECTORY(./Threads SDK_SRC)
AUX_SOURCE_DIRECTORY(./SmartPtr SDK_SRC)
AUX_SOURCE_DIRECTORY(./lzf SDK_SRC)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_LIBRARY(qbaselib ${SDK_SRC})

TARGET_LINK_LIBRARIES(qbaselib; pthread)

SET_TARGET_PROPERTIES(qbaselib PROPERTIES LINKER_LANGUAGE CXX)
