AUX_SOURCE_DIRECTORY(. QEDIS_SRC)

INCLUDE(${PROJECT_SOURCE_DIR}/CMakeCommon)

LINK_DIRECTORIES(../../leveldb)

ADD_LIBRARY(qediscore SHARED ${QEDIS_SRC})
SET(LIBRARY_OUTPUT_PATH ../../bin)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/QBase)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/leveldb/include)

ADD_DEPENDENCIES(qediscore qbaselib leveldb)
TARGET_LINK_LIBRARIES(qediscore; qbaselib; dl; leveldb)

SET_TARGET_PROPERTIES(qediscore PROPERTIES LINKER_LANGUAGE CXX)
