AUX_SOURCE_DIRECTORY(. QEDIS_SRC)

INCLUDE(${PROJECT_SOURCE_DIR}/CMakeCommon)

ADD_LIBRARY(qediscore ${QEDIS_SRC})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/QBase)

TARGET_LINK_LIBRARIES(qediscore; qbaselib; dl; leveldb)

SET_TARGET_PROPERTIES(qediscore PROPERTIES LINKER_LANGUAGE CXX)
