PROJECT(QEDISLIB)

AUX_SOURCE_DIRECTORY(. QEDIS_SRC)

INCLUDE(../CMakeCommon)

SET(LIBRARY_OUTPUT_PATH ../)
ADD_LIBRARY(qedislib SHARED ${QEDIS_SRC})

INCLUDE_DIRECTORIES(../QBase)

ADD_DEPENDENCIES(qedislib qbaselib)
TARGET_LINK_LIBRARIES(qedislib; qbaselib)

SET_TARGET_PROPERTIES(qedislib PROPERTIES LINKER_LANGUAGE CXX)
