PROJECT(QEDISLIB)

AUX_SOURCE_DIRECTORY(. QEDIS_SRC)

INCLUDE(../CMakeCommon)

ADD_LIBRARY(qedislib SHARED ${QEDIS_SRC})
SET(LIBRARY_OUTPUT_PATH ../../bin)

INCLUDE_DIRECTORIES(../QBase)

ADD_DEPENDENCIES(qedislib qbaselib)
TARGET_LINK_LIBRARIES(qedislib; qbaselib; dl)

SET_TARGET_PROPERTIES(qedislib PROPERTIES LINKER_LANGUAGE CXX)
