PROJECT(QEDISSERVER)

SET(CMAKE_CXX_FLAGS_DEBUG   "-g -Wall ")
SET(CMAKE_BUILD_TYPE "Debug")

AUX_SOURCE_DIRECTORY(. QEDISSERVER_SRC)

LINK_DIRECTORIES(../QBase)
INCLUDE_DIRECTORIES(../QBase)

ADD_EXECUTABLE(qedissvr ${QEDISSERVER_SRC})
SET(EXECUTABLE_OUTPUT_PATH  ../)
TARGET_LINK_LIBRARIES(qedissvr qbaselib; pthread)
ADD_DEPENDENCIES(qedissvr qbaselib)
