PROJECT(UNITTEST)

SET(CMAKE_CXX_FLAGS_DEBUG   "-g -Wall ")
SET(CMAKE_BUILD_TYPE "Debug")

AUX_SOURCE_DIRECTORY(. UNITTEST_SRC)

LINK_DIRECTORIES(../QedisLib)
INCLUDE_DIRECTORIES(../QedisLib)
INCLUDE_DIRECTORIES(../QBase)

ADD_EXECUTABLE(qunittest ${UNITTEST_SRC})
SET(EXECUTABLE_OUTPUT_PATH  ../)
TARGET_LINK_LIBRARIES(qunittest  qedislib)
ADD_DEPENDENCIES(qunittest qedislib)
