INCLUDE(${PROJECT_SOURCE_DIR}/CMakeCommon)

AUX_SOURCE_DIRECTORY(. UNITTEST_SRC)

LINK_DIRECTORIES(../../leveldb)
LINK_DIRECTORIES(../../rocksdb)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/QedisCore)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/QedisCore)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/QBase)

ADD_EXECUTABLE(qunittest ${UNITTEST_SRC})
SET(EXECUTABLE_OUTPUT_PATH  ../../bin)
TARGET_LINK_LIBRARIES(qunittest  qediscore; leveldb; rocksdb)
ADD_DEPENDENCIES(qunittest qediscore)
