INCLUDE(${PROJECT_SOURCE_DIR}/CMakeCommon)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ananas)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/cluster_conn)

AUX_SOURCE_DIRECTORY(. PROXY_SRC)
ADD_EXECUTABLE(qedisproxy ${PROXY_SRC})

SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/bin/)

TARGET_LINK_LIBRARIES(qedisproxy ananas;zk)

ADD_DEPENDENCIES(qedisproxy ananas; zk)

