CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(${PROJECT_SOURCE_DIR}/CMakeCommon)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ananas)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/zk)

AUX_SOURCE_DIRECTORY(. ZK_SRC)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_LIBRARY(zk ${ZK_SRC})
TARGET_LINK_LIBRARIES(zk; ananas; pthread)
ADD_DEPENDENCIES(zk; ananas)

SET_TARGET_PROPERTIES(zk PROPERTIES LINKER_LANGUAGE CXX)
